<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hallo Welt!</string>
    <string name="app_name">2FactorLockscreen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="app_explanation_head">Information</string>
    <string name="app_explanation_txt">Herzlich Willkommen und vielen Dank,  dass Sie an der Evaluation dieser APP teilnehmen. Mit dieser APP soll herausgefunden werden, ob man zwei Sicherheitsmechanismen im täglichen Gebrauch verwenden kann.</string>
    <string name="quick_start_statement">Sie haben noch keine Einrichtung vorgenommen. Nutzen Sie den Lock-Assistenten für eine einfache Konfiguration.</string>
    <string name="about_info_txt">Dieser Prototyp entstand in der Veranstaltung „Fortgeschrittene Mensch-Maschine-Interaktion“ 
        der Technischen Hochschule Mittelhessen. In dieser App geht es darum zu Evaluieren, ob man im täglichen 
        Gebrauch mehr als nur eine Sicherheitsabfrage für ein Android-Smartphone verwenden sollte.\n\n
        Hierzu verwenden wir die Mustereingabe von Android und gleichzeitig die 
        Spracheingabe für die zweite Sicherheitsabfrage. Nun soll evaluiert werden, ob es im täglichen 
        Gebrauch Sinn ergibt diese Kombination zu verwenden.\n\n
        Mitwirkende:\n
        Thomas Breitbach\n
        André Wißner\n
        Julius Jay Butler\n
        Natalie Göpfert</string>

    <!-- assistenten strings -->
    <string name="assistent_explanation">Der Lock Assistent führt Sie bequem und einfach durch diese App und erklärt Ihnen die einzelnen Optionen und Einstellungsmöglichkeiten. \n\nDauer: ca. 3 Minuten!</string>
    <string name="start_assistent">Assistent starten</string>
    <string name="quickstart_assistent">Zum Assistenten</string>
    <string name="assistent">Assistent</string>
    <string name="assistent_start_pattern_description">Zeichnen Sie im nächsten Schritt mit einem Finger ein beliebiges Muster Ihrer Wahl. Die einzelnen Punkte können mehrfach selektiert werden, um komplexere Muster zu ermöglichen.</string>
    <string name="assistent_pattern_record_description">Bitte zeichnen Sie ein beliebiges Muster Ihrer Wahl und Bestätigen Sie Ihre Eingabe anschließend mit „OK“.</string>
    <string name="assistent_pattern_record_description_repeat">Bitte wiederholen Sie Ihr eingegebenes Muster und bestätigen Sie dann mit „OK“.</string>
    <string name="assistent_speech_input_record_description">Sprechen Sie jetzt ihren Entsperrbefehl in das Mikrofon und bestätigen Sie Ihre Aufnahme anschließend mit „OK“.</string>
    <string name="assistent_speech_input_record_description_repeat">Wiederholen Sie den von Ihnen eingesprochenen Entsperrbefehl und bestätigen Sie diesen dann mit „OK“.</string>
    <string name="app_evaluation_start_description">Zeichnen Sie nun das von Ihnen gewählte  Muster und sprechen Sie gleichzeitig Ihren Entsperrbefehl in das mobile Endgerät ein. Bei richtiger Authentifizierung erhalten Sie eine Bestätigung.</string>
    <string name="app_evaluation_success_input">Gratulation! Sie haben soeben erfolgreich ihre Entsperrungskombination eingerichtet und damit das Sicherheitslevel ihres mobilen Endgerätes erhöht.</string>
    <!-- Assistent Strings 3.2 -->
    <string name="main_assistent_headline">Lockscreen Assistent</string>
    <string name="main_assistent_next">Weiter</string>
    <string name="main_assistent_abort">Abbrechen</string>
    <string name="manual_input">Manuelle Eingabe</string>
    <string name="manual_input_explanation">Mit Hilfe der manuellen Eingabe können Sie …</string>
    <string name="start_speech_input">Spache aufzeichnen</string>
    <string name="start_pattern_input">Muster aufzeichnen</string>
    <string name="pattern_recorded">Ihr Muster wurde gespeichert!</string>
    <string name="speech_recorded">Ihr Spracheingabe wurde gespeichert!</string>
    <string name="voice_prompt">Voice recognition Demo…</string>
    <string name="voice_no_match">Keine Spracheingabe erkannt!</string>
    <string name="no_speech">Leider unterstützt dein Gerät keine Spracherkennung!</string>
    <string name="your_choice">Ihre Wahl: %s</string>
    <string name="asisstent_finish_title">Herlichen Glückwunsch!</string>
    <string name="assistent_finish_information">Herzlichen Glückwunsch, Sie haben den Assistenten erfolgreich eingerichtet. Sie sind nun bereit, den Mechanismus dieser App zu testen. \n\n Klicken Sie auf "Jetzt testen", um den Mechanismus zu testen oder klicken Sie auf "Später testen".</string>
    <string name="assistent_finish_test_button">Jetzt testen</string>
    <string name="assistent_finish_later_button">Später testen</string>

    <!-- Slidemenü -->
    <string name="about">Über diese App</string>
    <string name="home">Hauptmenü</string>
    <string name="settings">Einstellungen</string>
    <string name="code_on_github">Quellcode auf Github</string>
    <string name="dont_show_again">Nicht wieder anzeigen!</string>
    <string name="main_menu">Hauptmenü</string>
    <string name="pattern">Muster</string>
    <string name="speech_recognition">Spracherkennung</string>
    <string name="logins_successful">Erfolgreiche Logins</string>
    <string name="logins_failed">Fehlgeschlagene Logins</string>
    <string name="app_version">App Version: </string>

    <!-- Fehlertext -->
    <string name="writing_prefs_error_01">Speichern der Einstellung nicht möglich!</string>

    <!-- Strings for the PrototypeFragmentView -->
    <string name="title_activity_prototype_fragment">PrototypeFragment</string>
    <string name="prototype_headline">Prototyp testen</string>
    <string name="prototype_start_description">Teste den Prototyp</string>
    <string name="prototype_install_pattern">Sie haben noch kein Entsperrmuster eingerichtet! Gehen Sie zur "Manuellen Eingabe" und richten Sie Ihr persönliches Muster ein, bevor Sie den Prototypen testen können.</string>
    <string name="prototype_install_speech">Sie haben noch kein Spracherkennung eingerichtet! Gehen Sie zur "Manuellen Eingabe" und richten Sie Ihr einen diese ein, bevor Sie den Prototypen testen können.</string>
    <string name="manual_input_goto">Zur manuellen Eingabe</string>

    <!-- menü strings -->
    <string name="ok">OK</string>
    <string name="title_activity_assistent_main">AssistentMainActivity</string>

    <!-- Assistent String 3.3 -->
    <string name="assistent_speech_next">Weiter</string>
    <string name="assistent_speech_abort">Abbrechen</string>
    <string name="assistent_start_speech_input_description">Tippen Sie auf das Mikrofon und sprechen Sie Ihren Entsperrbefehl mit mindestens einem Wort, klar und deutlich in Ihr mobiles Endgerät.\n\nHalten sie Ihr Gerät dabei etwa 20–30cm von Ihrem Mund entfernt.</string>
    <string name="assistent_speech_select_result">Wähle deine Spracheingabe</string>
    <string name="nothing_recorded">Sie haben noch nichts aufgenommen!</string>

    <!-- Submenue MainActivity 3.2 -->
    <string name="main_activity_abort">Assistenten abbrechen</string>
    <string name="title_activity_assistent_patter_input">AssistentPatterInput</string>
    <string name="title_activity_prototype_start">PrototypeStart</string>
    <string name="dialog_title">2FactorLockScreen</string>
    <string name="dialog_message">Möchten Sie wirklich den Prototyp beenden?</string>
    <string name="evaluation_headline">Prototyp evaluieren</string>
    <string name="title_activity_evaluation_fragment">EvaluationFragment</string>
    <string name="title_activity_assistent_speech_input">AssistentSpeechInputActivity</string>

    <!-- Prototype Testing -->
    <string name="prototype_information_text">Nachdem Sie nun die zwei Sicherheitsmeschanismen eingestellt haben, können Sie nun den Prototypen testen. Am Ende des Testens, können Sie direkt im Anschluss eine Evaluation durchführen.\n\n Klicken Sie auf "Test starten", wenn Sie bereit sind!</string>
    <string name="prototype_bttn_start">Test starten</string>
    <string name="speech_Activation_LBL">Spracheingabe</string>
    <string name="muster_Activation_LBL">Mustereingabe</string>
    <string name="info_Activation_LBL">Informationsdialog</string>
    <string name="info_delete_LBL">App zurücksetzen</string>
    <string name="tst_speech_on">Spracherkennung wurde aktiviert</string>
    <string name="tst_speech_off">Spracherkennung wurde deaktiviert</string>
    <string name="tst_muster_on">Mustererkennung wurde aktiviert</string>
    <string name="tst_muster_off">Mustererkennung wurde deaktiviert</string>
    <string name="Einstellungen_Lbl">Einstellungen</string>
    <string name="an_BTN_LBL">AN</string>
    <string name="aus_BTN_LBL">AUS</string>
    <string name="title_activity_assistent__finish">Lockscreen Assistent</string>
    <string name="title_activity_prototype_test">PrototypeTestActivity</string>
    <string name="no_inet_connection">Achtung: Bitte stellen Sie sicher, dass Sie mit dem Internet verbunden sind!</string>
    <string name="title_activity_prototype_tes_finish">PrototypeTesFinish</string>
    <string name="lastTextString">Herzlichen Glückwunsch! Sie haben erfolgreich das Szenario beendet! \n\nKlicken Sie auf den Button &quot;Evaluiren&quot;, wenn Sie die App evaluieren möchten oder auf &quot;Nicht evaluieren&quot;, wenn Sie es an einem späteren Zeitpunkt tun möchten!</string>
    <string name="evalApp">Evaluieren</string>
    <string name="evalAbort">Nicht evaluieren</string>

</resources>