<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manual_input_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|fill_vertical"
    android:gravity="top"
    android:orientation="vertical" >

	<!-- Headline -->
	<TextView
	    android:id="@+id/tv_headline"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:gravity="center"
	    android:layout_gravity="top"
	    android:text="@string/manual_input"
	    android:background="@color/abs__background_holo_light"
	    android:textSize="@dimen/txt_headline_size"/>

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="15dip"
	        android:layout_marginRight="15dip">
	        
	        <!-- Content here! -->
	        <TextView 
	            android:id="@+id/tv_lockscreen_explanation"
	            android:layout_width="wrap_content"
	   			android:layout_height="wrap_content"
	   			android:text="@string/manual_input_explanation"
	   			android:layout_marginTop="25dip"
	   			android:textSize="@dimen/txt_info_text_size"/>
      
	        <Button
			    android:id="@+id/btn_start_pattern_input"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/start_pattern_input"
			    android:layout_marginTop="15dip"/>
	        
	        <Button
			    android:id="@+id/btn_start_speech_input"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/start_speech_input"
			    android:layout_marginTop="15dip"/>
	        
	    </LinearLayout>
	</ScrollView>
</LinearLayout>
