<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrototypeTestFinish" >

    <TextView
        android:id="@+id/lastText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastTextString" />

    <Button
        android:id="@+id/bttnAbort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:text="@string/evalAbort" />

    <Button
        android:id="@+id/bttnEval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bttnAbort"
        android:layout_alignBottom="@+id/bttnAbort"
        android:layout_alignRight="@+id/lastText"
        android:text="@string/evalApp" />

</RelativeLayout>