<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AssistentFinishActivity" >

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/abs__background_holo_light"
        android:gravity="center"
        android:text="@string/asisstent_finish_title"
        android:textSize="@dimen/txt_headline_size" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/assistent_finish_information"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/bttnAbort"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/assistent_finish_later_button" />

                <Button
                    android:id="@+id/bttnTesten"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/assistent_finish_test_button" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
