<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/assistent_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|fill_vertical"
    android:gravity="top"
    android:orientation="vertical">

    <!-- Headline -->
	<TextView
	    android:id="@+id/tv_headline"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:gravity="center"
	    android:layout_gravity="top"
	    android:text="@string/start_pattern_input"
	    android:background="@color/abs__background_holo_light"
	    android:textSize="@dimen/txt_headline_size"/>

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	        
	        <ImageView
		        android:id="@+id/img_pattern"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/img_3_2_pattern" />
	        
	         <TextView
		        android:id="@+id/tv_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/assistent_start_pattern_description"
		        android:textAppearance="?android:attr/textAppearanceMedium" />	         
	         
			<LinearLayout 
			    android:id="@+id/navigationLayout"
			    android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_marginTop="20dip"
	        	android:orientation="horizontal"
	        	android:gravity="center">
			    <Button
			        android:id="@+id/btn_cancel"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/main_assistent_abort" />
			
			    <Button
			        android:id="@+id/btn_next"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/main_assistent_next" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>