<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/assistent_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|fill_vertical"
    android:gravity="top"
    android:orientation="vertical"
    >

    <!-- Headline -->
	<TextView
	    android:id="@+id/tv_headline"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:gravity="center"
	    android:layout_gravity="top"
	    android:text="@string/assistent"
	    android:background="@color/abs__background_holo_light"
	    android:textSize="@dimen/txt_headline_size"/>

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
    		android:layout_marginRight="@dimen/activity_horizontal_margin">
	        
	        <TextView 
	            android:id="@+id/tv_lockscreen_explanation"
	            android:layout_width="wrap_content"
	   			android:layout_height="wrap_content"
	   			android:text="@string/assistent_explanation"
	   			android:layout_marginTop="25dip"
	   			android:textSize="@dimen/txt_info_text_size"/>
      
	        <Button
			    android:id="@+id/btn_start_assistent"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/start_assistent"
			    android:layout_marginTop="15dip"/>
	        
	    </LinearLayout>
	</ScrollView>
</LinearLayout>
